Closed Bug 1822519 Opened 2 years ago Closed 2 years ago

startup Crash in [@ qcms::c_bindings::qcms_profile_get_data]

Categories

(Core :: Graphics: WebRender, defect, P1)

Unspecified
Windows
defect

Tracking

()

RESOLVED FIXED
113 Branch
Tracking Status
firefox-esr102 --- unaffected
firefox111 --- unaffected
firefox112 --- unaffected
firefox113 + fixed

People

(Reporter: aryx, Assigned: jgilbert)

References

(Regression)

Details

(Keywords: crash, regression, topcrash)

Crash Data

Attachments

(1 file)

81 crashes from 9 installations, all on Windows with Firefox 113.0a1 20230314094139 or newer, most on startup.

Crash report: https://crash-stats.mozilla.org/report/index/41758c3a-a2c9-4e6b-84f8-9b7290230315

Reason: EXCEPTION_ACCESS_VIOLATION_READ

Top 10 frames of crashing thread:

0  xul.dll  qcms::c_bindings::qcms_profile_get_data  gfx/qcms/src/c_bindings.rs:423
1  xul.dll  mozilla::color::ColorProfileDesc::From  gfx/gl/Colorspaces.cpp:350
2  xul.dll  mozilla::wr::DCLayerTree::QueryOutputColorProfile  gfx/webrender_bindings/DCLayerTree.cpp:1756
3  xul.dll  mozilla::wr::DCLayerTree::OutputColorProfile const  gfx/webrender_bindings/DCLayerTree.h:242
4  xul.dll  mozilla::wr::DCExternalSurfaceWrapper::EnsureSurfaceForExternalImage::<lambda_1>::operator const  gfx/webrender_bindings/DCLayerTree.cpp:704
4  xul.dll  mozilla::wr::DCExternalSurfaceWrapper::EnsureSurfaceForExternalImage  gfx/webrender_bindings/DCLayerTree.cpp:609
5  xul.dll  mozilla::wr::DCExternalSurfaceWrapper::AttachExternalImage  gfx/webrender_bindings/DCLayerTree.cpp:575
6  xul.dll  webrender::renderer::Renderer::update_native_surfaces  gfx/wr/webrender/src/renderer/mod.rs:4178
7  xul.dll  webrender::renderer::Renderer::render_impl  gfx/wr/webrender/src/renderer/mod.rs:1441
8  xul.dll  webrender::renderer::Renderer::render  gfx/wr/webrender/src/renderer/mod.rs:1197
Flags: needinfo?(jgilbert)

The bug is marked as tracked for firefox113 (nightly). However, the bug still isn't assigned.

:bhood, could you please find an assignee for this tracked bug? Given that it is a regression and we know the cause, we could also simply backout the regressor. If you disagree with the tracking decision, please talk with the release managers.

For more information, please visit auto_nag documentation.

Flags: needinfo?(bhood)
Severity: -- → S2
Keywords: topcrash
Assignee: nobody → jgilbert
Flags: needinfo?(jgilbert)
Priority: -- → P1
Pushed by jgilbert@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/fb9b9cdb5f15 When qcms_profile_from_memory fails, default to sRGB for display space. r=gfx-reviewers,jrmuizel
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 113 Branch
Flags: needinfo?(bhood)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: