Bug 1822519 - When qcms_profile_from_memory fails, default to sRGB for display space. r=gfx-reviewers,jrmuizel

Differential Revision: https://phabricator.services.mozilla.com/D172837